Add linear kinetic schemes to modcc.
* Incorporate symbolic GE code from prototype (with some
simplifications) in `msparse.hpp`, `symge.hpp` and `symge.cpp`, together with unit tests.

* Add two kinetic scheme test cases for validation: test_kin1 (simple
exponential scheme) and test_kinlva (combination of exponential gate and
a three-species kinetic scheme, modelling a low voltage-activated
Calcium channel from Wang, X. J. et al., J. Neurophys. 1991).

* Adapt numeric HH validation data generation to LVA Ca channel, with
explicit stopping at stimulus discontinuities.

* Add two new validation tests based on above:
`kinetic.kin1_numeric_ref` and `kinetic.kinlva_numeric_ref` (multicore
backend only).

* Introduce a `BlockRewriterBase` visitor base class, as an aid for
visitors that transform/rewrite procedure bodies; refactor
`KineticRewriter` over this class.

* Introduce common `error_stack` mixin class for common functionality
across `Module` and the various procedure rewriters.

* Implement visitors and public-facing convenience wrappers in
`symdiff.hpp` and `symdiff.cpp`:
   * `involves_identifer` for testing if an expression contains given
identifiers.
   * `constant_simplify` for constant folding with removal of trivial
terms arising from a `NumberExpression` of zero or one.
   * `expr_value` to extract the numerical value of a
`NumberExpression`, or `NaN` othereise.
   * `is_zero` to test if an expression is numerically zero.
   * `symbolic_pdiff` to perform symbolic partial differentiation; this
adds a new (not parseable) expression subclass to represent opaque
partial differential terms.
   * `substitute` to substitute identifiers for other expressions within
an expression.
   * `linear_test` for linearity, diagonality and homogeneity testing
(this is probably redundant, given `ExpressionClassifier` already exists).

* Simplify unnecessary uses of `make_unique` with `Vistor` subclasses.

* Make `SOLVE` statement rewriting more generic, through the use of
sol

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(BuildModules.cmake)
 
 # the list of built-in mechanisms to be provided by default
-set(mechanisms pas hh expsyn exp2syn)
+set(mechanisms pas hh expsyn exp2syn test_kin1 test_kinlva)
 
 set(modcc_opt)
 if(NMC_USE_OPTIMIZED_KERNELS) # generate optimized kernels
