--- a/tests/validation/CMakeLists.txt
+++ b/tests/validation/CMakeLists.txt
@@ -3,6 +3,7 @@ set(VALIDATION_SOURCES
     validate_ball_and_stick.cpp
     validate_compartment_policy.cpp
     validate_soma.cpp
+    validate_kinetic.cpp
     validate_synapses.cpp
 
     # support code
