--- a/validation/ref/numeric/CMakeLists.txt
+++ b/validation/ref/numeric/CMakeLists.txt
@@ -2,6 +2,16 @@
 
 if(NMC_BUILD_JULIA_VALIDATION_DATA)
     add_validation_data(
+        OUTPUT numeric_kin1.json
+        DEPENDS numeric_kin1.jl
+        COMMAND ${JULIA_BIN} numeric_kin1.jl)
+
+    add_validation_data(
+        OUTPUT numeric_kinlva.json
+        DEPENDS numeric_kinlva.jl LVAChannels.jl
+        COMMAND ${JULIA_BIN} numeric_kinlva.jl)
+
+    add_validation_data(
         OUTPUT numeric_soma.json
         DEPENDS numeric_soma.jl HHChannels.jl
         COMMAND ${JULIA_BIN} numeric_soma.jl)
