--- a/tests/validation/CMakeLists.txt
+++ b/tests/validation/CMakeLists.txt
@@ -32,16 +32,19 @@ if(NMC_VALIDATION_DATA_DIR)
 endif()
 
 add_executable(validate.exe ${VALIDATION_SOURCES})
+target_link_libraries(validate.exe LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} )
 set(TARGETS validate.exe)
 
 if(NMC_WITH_CUDA)
     cuda_add_executable(validate_cuda.exe ${VALIDATION_CUDA_SOURCES})
     list(APPEND TARGETS validate_cuda.exe)
     target_link_libraries(validate_cuda.exe LINK_PUBLIC gpu)
+    target_link_libraries(validate_cuda.exe LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} )
 endif()
 
 
 foreach(target ${TARGETS})
+    target_link_libraries(${target} LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT} )
     target_link_libraries(${target} LINK_PUBLIC nestmc gtest)
 
     target_link_libraries(${target} LINK_PUBLIC ${EXTERNAL_LIBRARIES})
