dependencies in docs/model/makefile to building images

--- a/docs/model/makefile
+++ b/docs/model/makefile
@@ -1,5 +1,8 @@
-report.pdf : *.tex
+report.pdf : *.tex images.dir bib
 	pdflatex report.tex
+
+images.dir:
+	make -C images
 
 force : report.pdf
 	pdflatex report.tex
