Base report generation makefile on latexmk.
Using latexmk simplifies the makefile structure and avoids
many of the problems with redundant pdflatex invocation.

--- a/docs/model/images/makefile
+++ b/docs/model/images/makefile
@@ -1,7 +1,14 @@
-all : cable.pdf soma.pdf
+.PHONY: all
 
-cable.pdf : cable.tex
-	pdflatex cable.tex
+sources := cable.tex soma.tex
 
-soma.pdf : soma.tex
-	pdflatex soma.tex
+all: $(patsubst %.tex,%.pdf,$(sources))
+
+LATEXMK := latexmk -pdf -halt-on-error
+
+%.pdf: %.tex
+	$(LATEXMK) $<
+
+clean:
+	for s in $(sources); do $(LATEXMK) -C "$$s"; done
+
