--- a/docs/model/makefile
+++ b/docs/model/makefile
@@ -1,21 +1,13 @@
-report.pdf : *.tex images.dir bib
-	pdflatex report.tex
+images := images/cable.pdf images/soma.pdf
 
-images.dir:
-	make -C images
+LATEXMK := latexmk -e '$$clean_ext=q/bbl run.xml/' -pdf -use-make -halt-on-error
 
-force : report.pdf
-	pdflatex report.tex
+report.pdf : report.tex appendix.tex formulation.tex symbols.tex SelfArx.cls bibliography.bib ${images}
+	$(LATEXMK) $<
 
-bib : *.tex bibliography.bib
-	pdflatex report.tex
-	bibtex report
-	pdflatex report.tex
-	pdflatex report.tex
+images/%.pdf: images/%.tex
+	make -C images $(patsubst images/%,%,$@)
 
-clean :
-	rm -f *.pdf
-	rm -f *.log
-	rm -f *.out
-	rm -f *.aux
-	rm -f *.toc
+clean:
+	$(LATEXMK) -C report.tex
+	make -C images clean    
