Address PR#145 review.
* Rename modcc `kinrewriter` sources to `kineticrewriter`.
* Add missing `%` in formatted error in `PDiffExpression`.
* Standardize spelling: `finalise` → `finalize`.
* Remove unnecessary `move` in `KineticRewriter::visit()`
* Extend comments in `msparse.hpp`.
* Suffix protected variable members with `_`.
* Extend comments for `BlockRewriterBase`, `symge::gj_reduce` implementation.

--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -9,7 +9,7 @@ set(MODCC_SOURCES
     functionexpander.cpp
     functioninliner.cpp
     lexer.cpp
-    kinrewriter.cpp
+    kineticrewriter.cpp
     module.cpp
     parser.cpp
     solvers.cpp
