Add order spikes/domain spike exchange, make backends pluggable
sorting spikes

cleanup and comment make_event_queues

PR#163: 1st fixes

Add compare.hpp to simplify two way compares for equal_range

first pass on cell domain tracking

partial weak scaling

WIP: almost coded

WIP: weak scaling

WIP: compiles

WIP: comment on communicator

WIP: compiling template communicator on make_events

WIP: All three make_even backends compiling

WIP: Clean all make_event backends

WIP: extra profiling

Add more profiling

compiles with master merge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,6 +184,27 @@ elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX2")
 endif()
 
 #----------------------------------------------------------
+# Which communicator algorithm to use for finding
+#  spike:connection matches: linear/global/domain
+#  linear is O(nodes),
+#  global is O(log(nodes)),
+#  domain is O(log(neurons/nodes))
+#----------------------------------------------------------
+set(NMC_USE_QUEUE "domain" CACHE STRING
+  "set the communication connection algorithm, one of linear/global/domain")
+set_property(CACHE NMC_USE_QUEUE PROPERTY STRINGS linear global domain)
+
+if(NMC_USE_QUEUE MATCHES "linear")
+  add_definitions(-DNMC_USE_LINEAR_QUEUE)
+elseif(NMC_USE_QUEUE MATCHES "global")
+  add_definitions(-DNMC_USE_GLOBAL_SEARCH_QUEUE)
+elseif(NMC_USE_QUEUE MATCHES "domain")
+  add_definitions(-DNMC_USE_DOMAIN_SEARCH_QUEUE)
+else()
+    message(FATAL_ERROR "-- Communication connectoin algorithm '${NMC_USE_QUEUE}' not supported, use one of linear/global/domain")
+endif()
+
+#----------------------------------------------------------
 # Only build modcc if it has not already been installed.
 # This is useful if cross compiling for KNL, when it is not desirable to compile
 # modcc with the same flags that are used for the KNL target.
