--- a/lmorpho/CMakeLists.txt
+++ b/lmorpho/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(lmorpho lmorpho.cpp lsystem.cpp)
+add_executable(lmorpho lmorpho.cpp lsystem.cpp lsys_models.cpp)
 
 target_link_libraries(lmorpho LINK_PUBLIC nestmc)
 target_link_libraries(lmorpho LINK_PUBLIC ${EXTERNAL_LIBRARIES})
