Use NMC_ variables in CMakeLists.txt of modcc.

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -12,8 +12,8 @@ set(mod_srcdir "${CMAKE_CURRENT_SOURCE_DIR}/mod")
 
 set(mech_dir "${CMAKE_CURRENT_SOURCE_DIR}/multicore")
 file(MAKE_DIRECTORY "${mech_dir}")
-if(VECTORIZE_TARGET STREQUAL "KNL" AND USE_OPTIMIZED_KERNELS)
-    set(modcc_target "avx512")
+if(NMC_VECTORIZE_TARGET STREQUAL "KNL" AND NMC_USE_OPTIMIZED_KERNELS)
+    set(modcc_target "cpu")
 else()
     set(modcc_target "cpu")
 endif()
