working spike detection in mc and gpu back ends

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,5 +189,5 @@ add_subdirectory(mechanisms)
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(miniapp)
-add_subdirectory(cub_test)
+#add_subdirectory(cub_test)
 
