--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TEST_CUDA_SOURCES
     test_cell_group.cu
     test_matrix.cu
     test_vector.cu
+    test_spikes.cu
 
     # unit test driver
     test.cpp
