Finish fix for cuda atomics of Pascal
- add cuda_atomic_add and cuda_atomic_sub wrappers for atomic addition
- choose native atomic add for Pascal and later architectures
- choose CAS workaround for devices earlier than Pascal
- add unit test for wrappers
- change default CUDA architecture target to sm_60 in CMakeLists.txt

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -17,6 +17,7 @@ build_modules(
 # Unit test sources
 
 set(TEST_CUDA_SOURCES
+    test_atomics.cu
     test_cell_group.cu
     test_gpu_stack.cu
     test_matrix.cu
