--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -18,7 +18,9 @@ build_modules(
 
 set(TEST_CUDA_SOURCES
     test_cell_group.cu
+    test_gpu_stack.cu
     test_matrix.cu
+    test_spikes.cu
     test_vector.cu
 
     # unit test driver
