Flat morphology representation in nestmc lib
* Simplify swc io implementation.
* Move lmorpho morphology classes into src/
* Add invariant check procedure for morphology.
* Make cells via swc -> morphology -> cell building, rather than direct swc -> cell.
* Allow option to use 'natural' discretization in morphology to determine number of compartments in built cell.

--- a/lmorpho/CMakeLists.txt
+++ b/lmorpho/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(lmorpho lmorpho.cpp lsystem.cpp lsys_models.cpp morphology.cpp morphio.cpp)
+add_executable(lmorpho lmorpho.cpp lsystem.cpp lsys_models.cpp morphio.cpp)
 
 target_link_libraries(lmorpho LINK_PUBLIC nestmc)
 target_link_libraries(lmorpho LINK_PUBLIC ${EXTERNAL_LIBRARIES})
