Morphologies in miniapp (#178)
Fix morphology section ctor bug.
Add morphology pools for miniapp from which morphologies are drawn in the recipe.
Add command-line options to expose above.
Add option --report-compartments to (slowly) check the min, mean, and max number of compartments in the generated cells across the simulation.
Use morphology::add_section to do all the heavy lifting; no need to make section_geometry objects by hand, unless you really, really want to.

--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -4,11 +4,13 @@ set(MINIAPP_SOURCES
     miniapp.cpp
     io.cpp
     miniapp_recipes.cpp
+    morphology_pool.cpp
 )
 set(MINIAPP_SOURCES_CUDA
     miniapp.cu
     io.cpp
     miniapp_recipes.cpp
+    morphology_pool.cpp
 )
 
 if(NMC_WITH_CUDA)
