Implements back-end event delivery for `gpu` back-end.
Testing indicates that this implementation gives bit-for-bit identical
results on the GPU with different group sizes.

* Virtualize `mechanism::deliver_events`.
* Add unit tests for `multi_event_stream`.
* Perform correct behaviour for cell dt==0 case.
* Add dt==0 unit tests for multicore and gpu back-end matrices.
* Split CUDA implementation for `gpu::multi_event_stream` into own .cu file.
* Use a cached copy of the per-cell time vector for queries in `fvm_multicell`.
* Add trace csv output option to miniapp.
* Add GPU kernel and unit test for end-of-integration time step test. By default, keep using the copy-to-host-and-test method, as it is faster for cell counts up to circa 10k; investigate adaptive/threshold solutions in the future.

Incorporates some PRs that are merged or pending on master:
* Add micro-benchmark for device vector comparison (PR #262).
* Incorporate synapse–target association bugfix and add unit tests (PR #277).
* Fix interleaved matrix data race issues (PR #280).

--- a/tests/ubench/CMakeLists.txt
+++ b/tests/ubench/CMakeLists.txt
@@ -5,6 +5,9 @@ include(ExternalProject)
 set(bench_sources
     accumulate_functor_values.cpp)
 
+set(bench_sources_cuda
+    cuda_compare_and_reduce.cu)
+
 # Set up google benchmark as an external project.
 
 set(gbench_src_dir "${CMAKE_CURRENT_SOURCE_DIR}/google-benchmark")
@@ -61,6 +64,19 @@ foreach(bench_src ${bench_sources})
 
     list(APPEND bench_exe_list ${bench_exe})
 endforeach()
+
+
+if(NMC_WITH_CUDA)
+    foreach(bench_src ${bench_sources_cuda})
+        string(REGEX REPLACE "\\.[^.]*$" "" bench_exe "${bench_src}")
+        cuda_add_executable("${bench_exe}" EXCLUDE_FROM_ALL "${bench_src}")
+        add_dependencies("${bench_exe}" gbench)
+        target_include_directories("${bench_exe}" PRIVATE "${gbench_install_dir}/include")
+        target_link_libraries("${bench_exe}" "${gbench_install_dir}/lib/libbenchmark.a")
+
+        list(APPEND bench_exe_list ${bench_exe})
+    endforeach()
+endif()
 
 add_custom_target(ubenches DEPENDS ${bench_exe_list})
 
