wip: remove last vestiges of openmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,10 +58,8 @@ set(EXTERNAL_INCLUDES "")
 set(NMC_THREADING_MODEL "serial" CACHE STRING "set the threading model, one of serial/tbb/cthread")
 set_property(CACHE NMC_THREADING_MODEL PROPERTY STRINGS serial tbb cthread)
 
-if(NMC_THREADING_MODEL MATCHES "serial")
-    # no additional configuration required for serial threading
-elseif(NMC_THREADING_MODEL MATCHES "tbb")
-    # TBB support
+if(NMC_THREADING_MODEL MATCHES "tbb")
+
     find_package(TBB REQUIRED)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TBB_DEFINITIONS}")
     add_definitions(-DNMC_HAVE_TBB)
@@ -69,6 +67,7 @@ elseif(NMC_THREADING_MODEL MATCHES "tbb")
     list(APPEND EXTERNAL_LIBRARIES ${TBB_LIBRARIES})
     list(APPEND EXTERNAL_INCLUDES ${TBB_INCLUDE_DIRS})
 elseif(NMC_THREADING_MODEL MATCHES "cthread")
+
     find_package(Threads REQUIRED)
     add_definitions(-DNMC_HAVE_CTHREAD)
     set(NMC_WITH_CTHREAD TRUE)
@@ -77,8 +76,6 @@ elseif(NMC_THREADING_MODEL MATCHES "cthread")
     if(CMAKE_USE_PTHREADS_INIT)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
     endif()
-else()
-    message( FATAL_ERROR "-- Threading model '${NMC_THREADING_MODEL}' not supported, use one of serial/tbb")
 endif()
 
 #----------------------------------------------------------
@@ -165,7 +162,7 @@ else()
 endif()
 
 #----------------------------------------------------------
-# Internal profiler support
+# Built-in profiler
 #----------------------------------------------------------
 option(NMC_WITH_PROFILING "use built-in profiling of miniapp" OFF)
 if(NMC_WITH_PROFILING)
