Add more general indirect access view.
* Implement `indirect_view` for indexed access via `transform_view`.
* Extend `transform_iterator` to permit non-const access to reference-returning functor results.
* Replace use of `indexed_view` with `indirect_view`.
* Fix missing cpu target for vectorized modcc outputs.

--- a/mechanisms/CMakeLists.txt
+++ b/mechanisms/CMakeLists.txt
@@ -13,8 +13,10 @@ if(NMC_VECTORIZE_TARGET STREQUAL "KNL")
     set(modcc_target "avx512")
 elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX")
     set(modcc_opt "-O")
+    set(modcc_target "cpu")
 elseif(NMC_VECTORIZE_TARGET STREQUAL "AVX2")
     set(modcc_opt "-O")
+    set(modcc_target "cpu")
 else()
     set(modcc_target "cpu")
 endif()
