wip: memory metering first working implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(BASE_SOURCES
     cell.cpp
     morphology.cpp
     parameter_list.cpp
+    profiling/memory_meter.cpp
     profiling/meter.cpp
     profiling/meter_manager.cpp
     profiling/profiler.cpp
@@ -10,6 +11,7 @@ set(BASE_SOURCES
     swcio.cpp
     threading/affinity.cpp
     util/debug.cpp
+    util/memory.cpp
     util/path.cpp
     util/unwind.cpp
     backends/multicore/fvm.cpp
