Initial microbenchmark builds.
* Use git submodule for incorporating Google benchmark library.
* Add one microbenchmark for comparing `util::transform_view`
performance.

Note that the microbenchmarks are not built by default; they
can be built with `make ubenches`, and then run individually.
The microbenchmarks will be built in `tests/ubench/`, relative
to the build directory.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,10 @@ add_subdirectory(global_communication)
 # Tests for performance: This could include stand alone tests. These do not necessarily be run automatically
 add_subdirectory(performance)
 
+# Microbenchmarks.
+add_subdirectory(ubench)
+
+
 # modcc tests
 if(NOT use_external_modcc)
     add_subdirectory(modcc)
