Address PR#227 review.
* Add `README.md` for micro-benchmarks with motivations, use and detail
for the one included benchmark.
* Have CMake attempt to update the git submodule with Google benchmark,
should it appear not to have been instantiated.
* Modify the `accumulate_functor_values` benchmark to be a bit more
useful: tests the two implementations against a function and
function-object version of the squaring operation.
* Reduce duplicated code in `accumulate_functor_values`.

--- a/tests/ubench/CMakeLists.txt
+++ b/tests/ubench/CMakeLists.txt
@@ -1,23 +1,40 @@
 include(ExternalProject)
 
-set(gbench_install_dir "${PROJECT_BINARY_DIR}/gbench")
-
-set(gbench_cmake_args
-    -DCMAKE_BUILD_TYPE=release
-    -DCMAKE_INSTALL_PREFIX=${gbench_install_dir}
-    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
-    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER})
-
-ExternalProject_Add(gbench
-    SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/google-benchmark"
-    CMAKE_ARGS "${gbench_cmake_args}"
-#    INSTALL_DIR "${gbench_install_dir}"
-)
-
-message(STATUS "gbench_install_dir:  ${gbench_install_dir}")
+# List of micro benchmarks to build.
 
 set(bench_sources
     accumulate_functor_values.cpp)
+
+# Set up google benchmark as an external project.
+
+set(gbench_src_dir "${CMAKE_CURRENT_SOURCE_DIR}/google-benchmark")
+set(gbench_install_dir "${PROJECT_BINARY_DIR}/gbench")
+
+set(gbench_cmake_args
+    "-DCMAKE_BUILD_TYPE=release"
+    "-DCMAKE_INSTALL_PREFIX=${gbench_install_dir}"
+    "-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}"
+    "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}")
+
+
+# Attempt to update git submodule if required.
+find_package(Git)
+if(NOT EXISTS "${gbench_src_dir}/.git")
+    if(GIT_FOUND)
+        exec_program("${GIT_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}"
+            ARGS submodule update --init google-benchmark)
+    else()
+        message(WARNING "google-benchmark submodule apparently not updated, but cannot find git")
+    endif()
+endif()
+
+ExternalProject_Add(gbench
+    SOURCE_DIR "${gbench_src_dir}"
+    CMAKE_ARGS "${gbench_cmake_args}"
+    INSTALL_DIR "${gbench_install_dir}"
+)
+
+# Build benches.
 
 foreach(bench_src ${bench_sources})
     string(REGEX REPLACE "\\.[^.]*$" "" bench_exe "${bench_src}")
