PR review fixes

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -31,6 +31,7 @@ set(TEST_CUDA_SOURCES
 set(TEST_SOURCES
     # unit tests
     test_algorithms.cpp
+    test_backend.cpp
     test_double_buffer.cpp
     test_cell.cpp
     test_compartments.cpp
