Feature/generic cell groups (#259)
Refactor model and recipe to build models that have different cell types.

    Refactor recipe::get_cell to return unique_any so that.
        All recipe definitions in tests and miniap had to be updated to use
        the new interface.
    Make a cell_group_factory that forwards arguments for building a
    cell group to the appropriate cell_group constructor.
    Refactor model to use generic cell types
        Constructor now delegates cell_group generation to the
        cell_group_factory.
        Add an implementation file model.cpp for model to reduce compilation
        times (by 2-7 seconds on my desktop).
    Refactor probe enumeration code in model and cell_group
        add interface to cell_group for querying enumeration of probes
        in a cell_group
        use this interface instead of directly computing enumeration in
        model constructor, which no longer has easy access to probe
        information.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(BASE_SOURCES
     common_types_io.cpp
     cell.cpp
+    cell_group_factory.cpp
     event_binner.cpp
+    model.cpp
     morphology.cpp
     parameter_list.cpp
     profiling/memory_meter.cpp
